--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "hue-and-tint-studio",
   "version": "0.0.0",
   "private": true,
+  "homepage": "https://sameergupta1499.github.io/portfolio-project",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix --ignore-path .gitignore"
+    "lint": "eslint . --fix --ignore-path .gitignore",
+    "predeploy": "vue-cli-service build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
@@ -27,6 +30,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "eslint": "^8.37.0",
     "eslint-plugin-vue": "^9.3.0",
+    "gh-pages": "^6.0.0",
     "node-sass": "^9.0.0",
     "playwright": "^1.38.1",
     "sass": "^1.60.0",
