added name to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hue-and-tint-studio",
-  "version": "0.0.0",
+  "name": "portfolio-project",
+  "version": "0.1.0",
   "private": true,
   "homepage": "https://sameergupta1499.github.io/portfolio-project",
   "scripts": {
